--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
+  freezed_annotation: ^2.4.4
+  go_router: ^14.2.7
+  json_annotation: ^4.9.0
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
+  riverpod_generator: ^2.4.3
+  custom_lint: ^0.6.7
+  riverpod_lint: ^2.3.13
+  go_router_builder: ^2.7.1
+  build_verify: ^3.1.0
 
 flutter:
   uses-material-design: true
